# lucifer

./: .gitignore  Cargo.toml  LICENSE  README.md  release_notes.md  results.json
.github/workflows/: deploy.yml
docs/: cli.md  sample_output.txt  sample_output_boring.txt  sample_output_durring_execution.txt  testDefinition.yaml
docs/example/: settings.lucifer.yaml  settings.yaml  testExamples.lucifer.yaml
roadmap/: !priority.md  hardening.md  package_management.md  reference_material.md
src/: args.rs  exiter.rs  logger.rs  main.rs  suite_constructor.rs  test_getter.rs
src/args_getter/: mod.rs  result_mutator.rs
src/constructor/: mod.rs  sorter.rs  transformer.rs
src/executor/: mod.rs
src/output_writer/: mod.rs  to_json.rs  writer.rs
src/router/: help.rs  mod.rs  test.rs  version.rs
src/suite/: mod.rs  sorter.rs  transformer.rs
src/suite_getter/: mod.rs  sorter.rs  transformer.rs
src/suite_getter/transformer/: mod.rs  to_feature_part.rs  to_primitive.rs  (+1 more)
src/test_runner/: mod.rs  rule_runner.rs
test_self/: a_alphabetic_test.lucifer.yaml  missing_parameters.lucifer.yaml  settings.lucifer.yaml  test.lucifer.yaml  type_checking.lucifer.yaml
tests/data/: can_have_one_test.yaml  fail_all.yaml  output_to_results_short_form_folder_custom_file.yaml
tests/exit_codes/: exit_codes.lucifer.yaml
tests/suite/: expectations.yaml  flags.yaml  input_directory.yaml  json_result.yaml  options.yaml  options2.yaml  output_directory.yaml  smoke_tests.yaml
tests/suites/: exit_codes.yaml  expectations.yaml  flags.lucifer.yaml  flags.yaml  info.lucifer.yaml  options.yaml  smoke_tests.lucifer.yaml  smoke_tests.yaml
tests/test_data/: output_to_folder_ending_in_json.yaml  output_to_results_long_form_folder_custom_file.yaml
(+37 files in other folders)
