[package]
name = "lucifer"
description = "Illuminating CLI testing."
version = "0.1.0"
edition = "2021"
authors = ["Winston Puckett"]
readme = "./README.md"
homepage = "https://github.com/winstonpuckett/lucifer"
repository = "https://github.com/winstonpuckett/lucifer"
license = "Apache-2.0"
keywords = ["testing", "cli", "integration", "cicd", "devops"]
categories = ["command-line-utilities", "development-tools::testing"]

[dependencies]
yaml-rust = "0.4"
json = "0.12.4"